--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -53,10 +53,10 @@ jobs:
           CIBW_BUILD: cp39-* cp310-* cp311-* cp312-* cp313-*
           # Skip 32-bit builds, musllinux, and PyPy
           CIBW_SKIP: "*-win32 *-manylinux_i686 *-musllinux_* pp*"
-          # Linux: Install build dependencies
+          # Linux: Install build dependencies (manylinux uses yum/dnf)
           CIBW_BEFORE_BUILD_LINUX: >
             yum install -y alsa-lib-devel libsndfile-devel bison flex ||
-            apt-get update && apt-get install -y libasound2-dev libsndfile1-dev bison flex
+            (apt-get update && apt-get install -y libasound2-dev libsndfile1-dev bison flex)
           # macOS: Set deployment target for C++17 support
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.14
           # Test the built wheels
