--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,8 @@ build-verbosity = 1
 # Build for Python 3.9-3.13
 build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
 
-# Skip 32-bit, musllinux, and PyPy builds
-skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"
+# Skip 32-bit and musllinux builds
+skip = "*-win32 *-manylinux_i686 *-musllinux_*"
 
 # Run pytest to ensure that the package was correctly built
 test-command = "pytest {project}/tests -v --tb=short -k 'not realtime'"
@@ -73,9 +73,9 @@ test-requires = ["pytest", "numpy"]
 # Skip testing on emulated architectures (slow) and Windows (access violation in tests)
 test-skip = "*-macosx_arm64 *-manylinux_aarch64 *-win_amd64"
 
-# Needed for full C++17 support
+# macOS ARM64 requires deployment target 11.0+
 [tool.cibuildwheel.macos.environment]
-MACOSX_DEPLOYMENT_TARGET = "10.14"
+MACOSX_DEPLOYMENT_TARGET = "11.0"
 
 # Linux: Install build dependencies (manylinux uses yum/dnf)
 [tool.cibuildwheel.linux]
