--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -135,7 +135,7 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     environment:
       name: pypi
-      url: https://pypi.org/p/pychuck
+      url: https://pypi.org/p/numchuck
     permissions:
       id-token: write
 
