--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "pychuck"
+name = "numchuck"
 version = "0.1.2"
 description = "Python bindings for ChucK audio programming language"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
-    { name = "shakfu", email = "shakfu@example.org" },
+    { name = "Shakeeb Alireza", email = "shakfu@example.org" },
 ]
 keywords = ["chuck", "audio", "music", "synthesis", "live-coding"]
 classifiers = [
@@ -37,10 +37,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/shakfu/pychuck"
+Homepage = "https://github.com/shakfu/numchuck"
 
 [project.scripts]
-pychuck = "pychuck.cli.main:main"
+numchuck = "numchuck.cli.main:main"
 
 [build-system]
 requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
