--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev = [
     "pytest>=8.3.5",
     "pytest-asyncio>=0.21.0",
     "ruff>=0.14.10",
+    "twine>=6.1.0",
     "types-Pygments>=2.18.0",
 ]
 
