--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14, macos-15, windows-latest]
+        os: [ubuntu-latest, macos-14, windows-latest]
 
     steps:
       - name: Checkout code
@@ -57,6 +57,8 @@ jobs:
           CIBW_BEFORE_BUILD_LINUX: >
             yum install -y alsa-lib-devel libsndfile-devel bison flex ||
             (apt-get update && apt-get install -y libasound2-dev libsndfile1-dev bison flex)
+          # macOS: Build universal wheels (x86_64 + arm64) via cross-compilation
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
           # macOS: Set deployment target (11.0 required for ARM64)
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=11.0
           # Test the built wheels
