--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -64,8 +64,8 @@ jobs:
           # Test the built wheels
           CIBW_TEST_REQUIRES: pytest numpy
           CIBW_TEST_COMMAND: pytest {project}/tests -v --tb=short -k "not realtime"
-          # Skip testing on some platforms (Windows has access violation issues in tests)
-          CIBW_TEST_SKIP: "*-macosx_arm64 *-manylinux_aarch64 *-win_amd64"
+          # Skip testing on cross-compiled aarch64 Linux (no native runner)
+          CIBW_TEST_SKIP: "*-manylinux_aarch64"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
